Git 1.1.x
------------------------------------------------------------------------------------------------------------------------

CONFIGS
	Changed: Lowered log level for TLS (Postfix)
	Fixed: Apache must not follow symlinks when the target file owner doesn't match with the symlink owner (security)

ENGINE
	Fixed: main::run: Argument "yes" isn't numeric in addition (+) at /var/www/imscp/engine/imscp-sw-mngr line 111
	Fixed: Wrong IP added in DNS zone files when the BASE_SERVER_IP and BASE_SERVER_PUBLIC_IP parameters are referring
		   to the same IP (private IP)

GUI
	Fixed: Literal percent sign must be escaped with another percent sign in translation strings
	Fixed: PHP Notice - Undefined variable $resellerId in reseller/alias.php
	Fixed: SQL user hosts must be separated from SQL users to avoid any customer confusion
	Fixed: Security issue - Input data for software instances are not validated correctly (Software Installer)

INSTALLER
	Fixed: Error about unknown IP when attempting to add new IP
	Fixed: lo must not be used as default device when adding new IP (installer)
	Fixed: Unable to upgrade to 1.1.14 (packages file is corrupted - Ubuntu Precise)

PLUGINS
	Fixed: Configuration change not processed when a plugin is being updated
	Fixed: Errors not catched on change when the __need_change__ flag is set

------------------------------------------------------------------------------------------------------------------------
1.1.14
------------------------------------------------------------------------------------------------------------------------

2014-09-15: Laurent Declercq
	RELEASE i-MSCP 1.1.14

DAEMON
	Fixed: Wrong version in 'helo' answer string

ENGINE
	Deprecated: Usage of iMSCP::HooksManager package is now deprecated and will be removed in later version
	Fixed: autoinstaller::Functions::doImscpBackup: Name "main::execmode" used only once...
	Fixed: Undefined value in tracker hash (vlogger)